# aoc24

./: Cargo.toml  README.md  circuit_sim.rs  dec24_out.txt  dec_21.rs  dec_22.rs  dec_23.rs  dec_24.rs  dec_xx.rs
src/: circuit_sim.rs  dec_01.rs  dec_02.rs  dec_03.rs  dec_04.rs  dec_05.rs  dec_06.rs  dec_07.rs  dec_08.rs  dec_09.rs  dec_10.rs  dec_11.rs  dec_12.rs  dec_13.rs  dec_14.rs  dec_15.rs  dec_16.rs  dec_17.rs  dec_17_part1.rs  dec_17_part2.rs  dec_18.rs  dec_19.rs  dec_20.rs  dec_21.rs  dec_22.rs  dec_23.rs  dec_24.rs  dec_25.rs  helper.rs  main.rs
src/dec_04/: window_iterator.rs
