[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"
default-run = "dec_24"

[[bin]]
path = "dec_24.rs"
name = "dec_24"

[[bin]]
path = "src/dec_23.rs"
name = "dec_23"

[[bin]]
path = "src/dec_22.rs"
name = "dec_22"

[[bin]]
path = "src/dec_21.rs"
name = "dec_21"

[[bin]]
path = "src/dec_20.rs"
name = "dec_20"

[[bin]]
path = "src/dec_19.rs"
name = "dec_19"

[[bin]]
path = "src/dec_18.rs"
name = "dec_18"

[[bin]]
path = "src/dec_17.rs"
name = "dec_17"

[[bin]]
path = "src/dec_16.rs"
name = "dec_16"

[[bin]]
path = "src/dec_15.rs"
name = "dec_15"

[[bin]]
path = "src/dec_14.rs"
name = "dec_14"

[[bin]]
path = "src/dec_13.rs"
name = "dec_13"

[[bin]]
path = "src/dec_12.rs"
name = "dec_12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus = "2.4.1"
crossbeam-channel = { version = "0.5.14", features = ["std"] }
genawaiter = "0.99.1"
itertools = "0.13.0"
nalgebra = "0.33.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rayon = "1.10.0"
regex = "1.11.1"
tokio = { version = "1.42.0", features = ["full"] }
